# print-money-or-die

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
pmod/: __init__.py  config.py  exceptions.py  main.py
pmod/advisor/: claude.py
pmod/analytics/: __init__.py  alpha.py  backfill.py  external_updates.py
pmod/auth/: schwab.py
pmod/broker/: schwab.py
pmod/dashboard/: app.py  dashboard.py
pmod/dashboard/assets/: dark-dropdown.css
pmod/dashboard/components/: __init__.py
pmod/dashboard/pages/: advisor.py  politician_trades.py  portfolio.py  settings.py  setup.py  watchlist.py
pmod/data/: external_accounts.py  market.py  models.py  politician_trades.py  yahoo_finance.py
pmod/optimizer/: portfolio.py
pmod/preferences/: profile.py
pmod/research/: politician_signals.py  screener.py  signals.py
pmod/scheduler/: jobs.py
pmod/utils/: retry.py  spinner.py
scripts/: daily-research.sh
tests/: conftest.py  test_advisor.py  test_api_inputs.py  test_broker.py  test_csv_import.py  test_exceptions.py  test_external_account_validation.py  test_optimizer.py  test_period_cutoff.py  test_politician_trades.py  test_portfolio_metrics.py  test_retry.py  test_scheduler.py  test_screener.py  test_signals.py  test_smoke.py
