[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "print-money-or-die"
version = "0.1.0"
description = "AI-powered portfolio optimizer and automated trading system"
requires-python = ">=3.10"
dependencies = [
    "schwab-py>=1.4.0",
    "dash>=2.17.0",
    "plotly>=5.22.0",
    "scipy>=1.13.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "apscheduler>=3.10.0",
    "structlog>=24.1.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.scripts]
pmod = "pmod.main:cli"

[tool.setuptools.packages.find]
include = ["pmod*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
